--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - rich_menus/**
+      - .gitignore
+      - .dockerignore
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
