Manual triggers with workflow_dispatch

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -7,6 +7,7 @@ on:
     paths-ignore:
       - .gitignore
       - .dockerignore
+  workflow_dispatch:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
