--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
 
@@ -27,7 +28,7 @@ jobs:
 
       - name: "Install requirements.txt"
         run: 
-          pip install -r requirements.txt
+          pip install line-bot-sdk==2.4.1
 
       - name: "Update Line rich menu"
         run: 
