--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
 
 jobs:
 
