--- a/fly.toml
+++ b/fly.toml
@@ -1,19 +1,22 @@
-# fly.toml file generated for line-bot-711 on 2023-02-04T00:41:29+08:00
+# fly.toml file generated for line-bot-711 on 2023-03-28T21:56:33+08:00
 
 app = "line-bot-711"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
+[build]
+  builder = "paketobuildpacks/builder:base"
+
 [env]
-  PORT = "8000"
+  PORT = "8080"
 
 [experimental]
   auto_rollback = true
 
 [[services]]
   http_checks = []
-  internal_port = 8000
+  internal_port = 8080
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
@@ -36,7 +39,3 @@ processes = []
     interval = "15s"
     restart_limit = 0
     timeout = "2s"
-
-[[statics]]
-  guest_path = "/app/public"
-  url_prefix = "/static/"
