--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,13 @@
-# fly.toml file generated for line-bot-711 on 2023-03-28T21:56:33+08:00
+# fly.toml file generated for line-bot-711 on 2023-03-29T22:21:54+08:00
 
 app = "line-bot-711"
 kill_signal = "SIGINT"
 kill_timeout = 5
+primary_region = "nrt"
 processes = []
 
 [build]
-  builder = "paketobuildpacks/builder:base"
+  dockerfile = "Dockerfile"
 
 [env]
   PORT = "8080"
@@ -16,7 +17,7 @@ processes = []
 
 [[services]]
   http_checks = []
-  internal_port = 8080
+  internal_port = 8000
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
