--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ line-bot-sdk==2.4.1
 lxml==4.9.2
 MarkupSafe==2.1.2
 multidict==6.0.4
+pytest==7.2.2
+pytest-cov==4.0.0
 python-decouple==3.8
 requests==2.28.1
 urllib3==1.26.15
