--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pytest==7.2.2
 pytest-cov==4.0.0
 python-decouple==3.8
 requests==2.28.1
+soupsieve==2.4
 urllib3==1.26.15
 Werkzeug==2.2.3
 yarl==1.8.2
