--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -e .
+        export PYTHONPATH=$GITHUB_WORKSPACE
 
     - name: Run tests with coverage
       run: pytest --cov=app --cov-report=xml tests/
