--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,10 +26,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        export PYTHONPATH=$GITHUB_WORKSPACE
 
     - name: Run tests with coverage
-      run: pytest --cov=app --cov-report=xml tests/
+      run: |
+        export PYTHONPATH=$GITHUB_WORKSPACE
+        pytest --cov=app --cov-report=xml tests/
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
