--- a/.github/workflows/line_bot.yml
+++ b/.github/workflows/line_bot.yml
@@ -12,6 +12,7 @@ on:
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+  CONFIG_TYPE: app.config.ProductionConfig
 
 jobs:
   update-line-rich-menu:
